[package]
name = "eth-keystore"
version = "0.6.0"
authors = [
    "Rohit Narurkar <rohit.narurkar@protonmail.com>"
]
edition = "2018"
license = "Apache-2.0"
description = "A minimalist library to interact with encrypted JSON keystores"
documentation = "https://docs.rs/eth-keystore"
repository = "https://github.com/roynalnaruto/eth-keystore-rs"
readme = "README.md"
keywords = ["ethereum", "web3", "wallet"]
exclude = ["tests/test-keys/*"]

[dependencies]
aes = "0.8.3"
ctr = "0.9.2"
digest = "0.10.7"
hex = "0.4.3"
hmac = "0.12.1"
pbkdf2 = { version = "0.11", default-features = false }
rand = "0.8.5"
scrypt = { version = "0.10.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
thiserror = { version = "1.0.50", default-features = false }
uuid = { version = "1.5", features = ["serde", "v4"] }
blst = "0.3.11"
